# ocaml-hotcrp

./: README.md  dune-project  hotcrp.opam
.github/workflows/: build.yml
src/: HotCRP.ml  dune
test/: .gitignore  dune  test.ml
